allow inclusion of the lock file, for tf 0.14

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ truststore.jks
 # Local .terraform directories
 **/.terraform/*
 **/.terrafor*
+!.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
