--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,7 @@ jobs:
           make build
     - name: Publish to Github Pages
       uses: peaceiris/actions-gh-pages@v3
-      env:
-        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: src/docs/public
