--- a/deploy/complete/kubernetes/manifests/carts-svc.yaml
+++ b/deploy/complete/kubernetes/manifests/carts-svc.yaml
@@ -4,9 +4,13 @@ metadata:
   name: carts
   labels:
     name: carts
-spec:
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    name: carts
+    app.kubernetes.io/name: carts
+  spec:
+    selector:
+      name: carts
+      app.kubernetes.io/name: carts
+    ports:
+      - port: 80
+        name: http
+        targetPort: 80
+    
