--- a/deploy/complete/kubernetes/manifests/catalogue-svc.yaml
+++ b/deploy/complete/kubernetes/manifests/catalogue-svc.yaml
@@ -5,9 +5,12 @@ metadata:
   name: catalogue
   labels:
     name: catalogue
-spec:
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    name: catalogue
+    app.kubernetes.io/name: catalogue
+  spec:
+    selector:
+      name: catalogue
+      app.kubernetes.io/name: catalogue
+    ports:
+      - port: 80
+        name: http
+        targetPort: 80
